bin= [
    {name = "main", path = "src/main.rs"},
    {name = "vars1", path = "problems/1-variables/vars-1.rs"},
    {name = "vars2", path = "problems/1-variables/vars-2.rs"},
    {name = "vars3", path = "problems/1-variables/vars-3.rs"},
    {name = "vars4", path = "problems/1-variables/vars-4.rs"},
    {name = "vars5", path = "problems/1-variables/vars-5.rs"},
]

[package]
name = "rhs-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
