bin= [
    {name = "main", path = "src/main.rs"},
    {name = "vars1", path = "problems/1 - variables/vars-1.rs" },
    {name = "vars2", path = "problems/1 - variables/vars-2.rs" },
    {name = "vars3", path = "problems/1 - variables/vars-3.rs" },
    {name = "vars4", path = "problems/1 - variables/vars-4.rs" },
    {name = "vars5", path = "problems/1 - variables/vars-5.rs" },
    {name = "vars6", path = "problems/1 - variables/vars-6.rs" },
    {name = "control1", path = "problems/2 - control flow/control-1.rs" },
    {name = "control2", path = "problems/2 - control flow/control-2.rs" },
    {name = "controlq1", path = "problems/2 - control flow/control-3.rs" },
    {name = "control3", path = "problems/2 - control flow/control-4.rs" },
    {name = "control4", path = "problems/2 - control flow/control-5.rs" },
    {name = "control5", path = "problems/2 - control flow/control-6.rs" },
    {name = "control6", path = "problems/2 - control flow/control-7.rs" },
    {name = "controlq2", path = "problems/2 - control flow/control-8.rs" },
    {name = "function1", path = "problems/3 - functions/functions-1.rs" },
    {name = "function2", path = "problems/3 - functions/functions-2.rs" },
    {name = "functionq1", path = "problems/3 - functions/functions-3.rs" },
    {name = "ownershipex", path = "problems/4 - borrowing & ownership/examples.rs" },
    {name = "ownership1", path = "problems/4 - borrowing & ownership/ownership-1.rs" },
]
# don't change this file, otherwise your programs may not compile
[package]
name = "rhs-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
